1998-07-11  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* rglclock.prj: 

	* main.cc (handle_delete_event): New function.
	(main): Connect a "delete_event" handler for toplevel.

	* glclock.cc (update): Draw clock only when a window and a context
	are available.

1998-07-09  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 0.24 released.

	* TODO: Updated.

	* NEWS: Updated.

	* glclock.cc (glclock): Install the "button_press/release_event"
	handlers.
	(glclock): Change rot_velocity's initial value to 0.
	(update): Convert the rotation velocity into degrees.

	* glclock.h (class glclock): Update the definition.
	(class glclock): Add new members press_x and press_y.

	* glclock.cc (glclock): Do not install the "expose_event"
	handler.
	(handle_button_event): New function.

	* Version 0.21 released.

	* TODO: Updated.

	* NEWS: Updated.

	* glclock.cc (update): Call draw_clock directly.

	* gdkGL/Makefile.am (libgdkGL_a_SOURCES): Drop gdkGL_gdkutils.c.
	(noinst_HEADERS): Drop gdkGL_gdkutils.h.

	* module.cc (draw_clock): Raise the GL_SPECULAR values.
	(init): Add another light.
	(draw_clock): Raise the GL_SHININESS value.

	* glclock.h (class glclock): Update the definition.
	* glclock.cc (handle_configure_event): New function.
	(glclock): Connect "configure_event" to the handler.
	(handle_expose_event): Do not call glViewport.
	Remove #include <GL/gl.h>.

	* module.h (class module): Update the definition.
	* module.cc (viewport): New function.

1998-07-07  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.h (class glclock): Update the definition.
	* glclock.cc (update): Do return a non-zero value.

1998-07-02  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 0.17 released.

	* configure.in: Add checks for OpenGL libraries.

	* TODO: New file.

1998-07-01  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* module.cc (draw_clock): Throw bad_alloc on failure of
	gluNewQuadric.

	* Makefile.am (rglclock_LDFLAGS): Add -export-dynamic.
